--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   background-color: #f2f1ed;
-  font-family: Georgia, Serif;
+  font-family: Georgia, serif;
   line-height: 1.5;
 }
 
@@ -16,6 +16,7 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
+  font-family: "Patua One", sans-serif
 }
 
 figcaption {
@@ -46,12 +47,4 @@ nav a:hover {
 
 .intro {
   font-size: 1rem;
-}
-
-h2 {
-  font-family: "Patua One", sans-serif
-}
-
-h1 {
-  font-family: "Patua One", sans-serif
 }
